tests/NormalTests/paczka1/small_fuzzy/12019297.err
Error in line 8: VdXYK S119 64,5
Error in line 6: dt75xRf A794 53,2
Error in line 4: S119 S119 69,5
Error in line 7: MQd A694 75,6
